--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col">
                     <div class="imge imge-column">
-                        <img src="/imge/services.jpg" alt="">
+                        <img src="/imge/services.png" alt="">
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
             <p>If you do it right, it will last forever</p>
             <div class="portfolio-content">
                 <div class="card">
-                    <img src="/imge/portfolio.jpg" alt="">
+                    <img src="/imge/portfolio-1.png" alt="">
                     <div class="info">
                         <h3>اعمالنا</h3>
                         <p>تركيب جميع أنظمة إطفاء الحريق الحديثة طفايات حريق صناديق حريق توريد وتركيب أجهزة الانذار
@@ -151,14 +151,14 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="/imge/portfolio (2).jpg" alt="">
+                    <img src="/imge/portfolio-2.png" alt="">
                     <div class="info">
                         <h3>اعمالنا</h3>
                         <p>تركيب دكيورات الاضاءه الحديثة والمخفيه الخاصه بدكيورات الجبس</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="/imge/portfolio (3).jpg" alt="">
+                    <img src="/imge/portfolio-3.png" alt="">
                     <div class="info">
                         <h3>اعمالنا</h3>
                         <p>تركيب كاميرات المراقبه تركيب انظمة الحمايه من السرقه تركيب انظمة الحمايه</p>
@@ -175,7 +175,7 @@
             <p>Less is more work</p>
             <div class="about-content">
                 <div class="imge">
-                    <img src="/imge/about.jpg" alt="">
+                    <img src="/imge/about.png" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur modi sequi repellendus
